# osu-sync

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_all_features.py  test_tui.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/osu-sync-cli/: AGENTS.md  Cargo.toml
crates/osu-sync-cli/src/: app.rs  cli.rs  event.rs  gui.rs  main.rs  resolver.rs  theme.rs  tui.rs  tui_runner.rs  tui_test.rs  worker.rs
crates/osu-sync-cli/src/app/: dispatch.rs
crates/osu-sync-cli/src/mcp/: mod.rs  tools.rs  types.rs
crates/osu-sync-cli/src/screens/: activity_log.rs  backup.rs  collection_config.rs  collection_summary.rs  collection_sync.rs  config.rs  dry_run_preview.rs  duplicate_dialog.rs  help.rs  main_menu.rs  media.rs  mod.rs  replay.rs  restore.rs  scan.rs  statistics.rs  sync_config.rs  sync_progress.rs  sync_summary.rs  unified_config.rs  unified_setup.rs  unified_status.rs
crates/osu-sync-cli/src/vision/: mod.rs  snapshot.rs
crates/osu-sync-cli/src/widgets/: footer.rs  header.rs  mod.rs  spinner.rs  status_bar.rs  tabs.rs
crates/osu-sync-cli/tests/: tui_integration.rs
crates/osu-sync-core/: AGENTS.md  Cargo.toml
crates/osu-sync-core/examples/: detect_paths.rs  test_lazer_db.rs  test_unified.rs  test_unified_storage.rs
crates/osu-sync-core/src/: activity.rs  error.rs  lib.rs  utils.rs
crates/osu-sync-core/src/backup/: archive.rs  mod.rs  options.rs
crates/osu-sync-core/src/beatmap/: metadata.rs  mod.rs
crates/osu-sync-core/src/collection/: mod.rs  model.rs  stable_reader.rs  sync.rs
crates/osu-sync-core/src/config/: mod.rs  paths.rs
crates/osu-sync-core/src/dedup/: detector.rs  mod.rs  strategy.rs
crates/osu-sync-core/src/filter/: criteria.rs  engine.rs  mod.rs
crates/osu-sync-core/src/lazer/: database.rs  exporter.rs  file_store.rs  importer.rs  mod.rs  scanner.rs
crates/osu-sync-core/src/media/: extractor.rs  mod.rs  types.rs
crates/osu-sync-core/src/parser/: mod.rs  osu_file.rs  osz.rs
crates/osu-sync-core/src/replay/: exporter.rs  filter.rs  mod.rs  model.rs  reader.rs
crates/osu-sync-core/src/stable/: exporter.rs  importer.rs  mod.rs  scanner.rs
crates/osu-sync-core/src/stats/: analyzer.rs  export.rs  mod.rs  model.rs
crates/osu-sync-core/src/sync/: conflict.rs  direction.rs  dry_run.rs  engine.rs  mod.rs  skip_list.rs
crates/osu-sync-core/src/unified/: config.rs  engine.rs  game_detect.rs  link.rs  manifest.rs  migration.rs  mod.rs  watcher.rs
crates/osu-sync-core/src/vision/: capture.rs  mod.rs
crates/osu-sync-core/tests/: unified_integration.rs
crates/osu-sync-gui/: Cargo.toml
crates/osu-sync-gui/src/: main.rs
crates/osu-sync-gui/src/components/: mod.rs
crates/osu-sync-gui/src/views/: mod.rs
docs/: import-fix-progress.md  unified-storage.md
