[workspace]
resolver = "2"
members = [
    "crates/osu-sync-core",
    "crates/osu-sync-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Finesssee/osu-sync"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# osu! specific
rosu-map = "0.2"

# File handling
zip = "2"
walkdir = "2"
sha2 = "0.10"
md-5 = "0.10"
directories = "5"
dirs = "5"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"

# GUI dependencies
iced = { version = "0.13", features = ["tokio"] }

# Vision/capture dependencies
image = "0.25"
base64 = "0.22"
