[package]
name = "osu-sync-cli"
description = "CLI application for osu! beatmap synchronization"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "osu-sync"
path = "src/main.rs"

[dependencies]
osu-sync-core = { path = "../osu-sync-core" }

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true
