[package]
name = "osu-sync-cli"
description = "osu! beatmap synchronization tool (TUI + optional GUI)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "osu-sync"
path = "src/main.rs"

[features]
default = []
gui = ["iced"]
vision = ["osu-sync-core/vision"]

[dependencies]
osu-sync-core = { path = "../osu-sync-core" }

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true

# Vision support
chrono = { version = "0.4", features = ["serde"] }

# GUI (optional)
iced = { workspace = true, optional = true }
