[package]
name = "osu-sync-core"
description = "Core library for osu! beatmap synchronization between stable and lazer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
vision = ["windows-capture", "image"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# osu! parsing
rosu-map.workspace = true
osu-db = { git = "https://github.com/kovaxis/osu-db", branch = "master" }

# File handling
zip.workspace = true
walkdir.workspace = true
sha2.workspace = true
md-5.workspace = true
directories.workspace = true
dirs.workspace = true

# Performance optimizations
blake3 = "1"              # 5-10x faster than SHA-256
bincode = "1"             # 5-10x faster than serde_json for cache
memmap2 = "0.9"           # Memory-mapped file I/O

# Parallel processing
rayon = "1.10"

# Data export
csv = "1.3"

# Realm database reading (for osu!lazer)
realm-db-reader = "0.2"
hex = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Process detection (cross-platform)
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

# Vision/capture (Windows only)
windows-capture = { version = "1.3", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.14"
tracing-subscriber = "0.3"
